server working localy

--- a/views/BusinessReservation.ejs
+++ b/views/BusinessReservation.ejs
@@ -4,25 +4,25 @@
     <!-- Primary Meta Tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Snawnaw - <%= name %> </title>
+    <title> Snawnaw - <%= name %> - Reservation And Checkin </title>
     <meta name="description" content=" <%= description %> "/>
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="<%= type %>">
-    <meta property="og:url" content="https://sanwnaw.com/<%= locale %>/<%= id %>">
-    <meta property="og:title" content="Snawnaw — <%= name %>">
+    <meta property="og:url" content="https://sanwnaw.com/<%= locale %>/<%= id %>/reservation">
+    <meta property="og:title" content="Snwanaw — <%= name %> - Reservation And Checkin">
     <meta property="og:description" content="<%= description %>">
     <meta property="og:image" content="<%= image %>">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://sanwnaw.com/<%= locale %>/<%= id %>">
-    <meta name="twitter:title" content="Snawnaw — <%= name %>">
+    <meta name="twitter:url" content="https://sanwnaw.com/<%= locale %>/<%= id %>/reservation">
+    <meta name="twitter:title" content="Snanwaw — <%= name %> - Reservation And Checkin">
     <meta name="twitter:description" content="<%= description %>">
     <meta name="twitter:image" content="<%= image %>">
 </head>
 <body>
-  <div>
-  </div>
-</body>
+    <div>
+    </div>
+  </body>
 </html>
