--- a/views/Reservation.ejs
+++ b/views/Reservation.ejs
@@ -9,20 +9,20 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="<%= type %>">
-    <meta property="og:url" content="https://sanwnaw.com/<%= locale %>/<%= id %>">
+    <meta property="og:url" content="https://snawnaw.com/<%= locale %>/reservation">
     <meta property="og:title" content="Snawnaw — <%= name %>">
     <meta property="og:description" content="<%= description %>">
     <meta property="og:image" content="<%= image %>">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://sanwnaw.com/<%= locale %>/<%= id %>">
+    <meta name="twitter:url" content="https://sanwnaw.com/reservation">
     <meta name="twitter:title" content="Snawnaw — <%= name %>">
     <meta name="twitter:description" content="<%= description %>">
     <meta name="twitter:image" content="<%= image %>">
 </head>
 <body>
-  <div>
-  </div>
-</body>
+    <div>
+    </div>
+  </body>
 </html>
